--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "diagnosticar": "oraculo diagnosticar",
-    "formatar": "oraculo formatar",
+    "formatar": "oraculo formatar --write",
     "types": "oraculo fix-types",
     "lint": "npm run lint:ts && npm run lint:css && npm run lint:html",
     "lint:ts": "eslint . --max-warnings=0",
