--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^25.0.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.2.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "htmlhint": "^1.8.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
-    "stylelint-config-tailwindcss": "^1.0.0",
+    "stylelint-config-tailwindcss": "^1.0.1",
     "tailwindcss": "^4.0.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.51.0",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "typescript-eslint": "^8.54.0",
+    "vite": "npm:rolldown-vite@^7.2.5"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "typescript": "~5.9.3"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
-    "minimatch": "^10.1.1",
+    "minimatch": "^10.1.2",
     "oraculo": "file:oraculo-0.3.7.tgz"
   }
 }
